@@ -584,13 +584,9 @@ void mid_exit(void)
         for (j = 0; j < 128; j++)
         {
           if (e[j].name != NULL)
-          {
             free(e[j].name);
-            e[j].name = NULL;
-          }
         }
         free(e);
-        e = NULL;
       }
       free(master_tonebank[i]);
       master_tonebank[i] = NULL;
@@ -603,13 +599,9 @@ void mid_exit(void)
         for (j = 0; j < 128; j++)
         {
           if (e[j].name != NULL)
-          {
             free(e[j].name);
-            e[j].name = NULL;
-          }
         }
         free(e);
-        e = NULL;
       }
       free(master_drumset[i]);
       master_drumset[i] = NULL;
